# google-reviews-pipeline

./: .gitignore  README.md  pyproject.toml
simulated_data/: fake_reviews.csv  fake_reviews.db  simulate_data.py
src/: dashboard_en_us.py  dashboard_pt_br.py  extract.py  load.py  transform.py
